Fixing sonar blocker issues